# bazel-to-cmake

./: README.md  bazel_to_cmake.py
.github/workflows/: format.yaml
bazel_to_cmake_lib/: __init__.py  build_file_functions.py  cmake_template.txt  converter.py  test_converter.py  test_workspace_file_functions.py  workspace_file_functions.py
test/projects/: README.md
test/projects/app-and-lib/: BUILD  CMakeLists.txt  main.cc  sum.cc
test/projects/app-and-sublib/: BUILD.bazel  CMakeLists.txt  Makefile  WORKSPACE.bazel  main.cc
test/projects/app-and-sublib/sublib/: BUILD.bazel  CMakeLists.txt  sum.h
test/projects/app-lib-group/: BUILD.bazel  CMakeLists.txt
test/projects/hello1/: WORKSPACE
test/projects/libsum/: BUILD  WORKSPACE  sum.cc
test/projects/simple-select/: BUILD  WORKSPACE  main.cc  message.h  message_default.cc  message_mac.cc  message_win.cc
